--- a/static/404.html
+++ b/static/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta data-n-head="true" content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
   <title>404 Page not found</title>
 </head>
 
